solid with mapper