@@ -2,14 +2,16 @@ package api.spotify.service;
 
 import api.spotify.client.SpotifyClient;
 import api.spotify.dto.album.AlbumAvailableMarketsDTO;
-import api.spotify.dto.album.Album;
+import api.spotify.dto.album.AlbumDTO;
 import api.spotify.dto.album.AlbumResponseDTO;
-import api.spotify.dto.artist.ArtistInfoDTO;
 import api.spotify.exception.AuthException;
 import api.spotify.exception.SpotifyException;
+import api.spotify.mapper.AlbumsMapper;
 import feign.FeignException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -20,6 +22,8 @@ public class AlbumsService {
 
     @Autowired
     SpotifyClient client;
+    @Autowired
+    AlbumsMapper albumsMapper;
 
     public AlbumResponseDTO newReleasesService(String auth, int limit, int offset) {
         try {
@@ -34,16 +38,14 @@ public class AlbumsService {
         try {
             return Optional.ofNullable(client.getAlbumsNewReleases(auth, limit, offset))
                     .map(AlbumResponseDTO::getAlbums)
-                    .map(Album::getItems)
-                    .orElse(Collections.emptyList())
+                    .map(AlbumDTO::getItems)
+                    .orElse(new ArrayList<>())
                     .stream()
-                    .flatMap(a -> a.getAvailableMarkets().stream())
+                    .flatMap(a -> albumsMapper.AlbumInfoDTOToString(a).stream())
                     .distinct()
-                    .sorted()
-                    .collect(Collectors.toList());
+                    .sorted().collect(Collectors.toList());
         } catch (RuntimeException | Error e) {
-            throw e instanceof RuntimeException ? new RuntimeException((e).getMessage()) :
-                    new SpotifyException("Spotify API error ".concat(e.getMessage()));
+            throw new SpotifyException("Spotify API error ".concat(e.getMessage()));
         }
     }
 
@@ -51,29 +53,10 @@ public class AlbumsService {
         try {
             return Optional.ofNullable(client.getAlbumsNewReleases(auth, limit, offset))
                     .map(AlbumResponseDTO::getAlbums)
-                    .map(Album::getItems)
-                    .orElse(Collections
-                            .emptyList())
-                    .stream()
-                    .map(album -> new AlbumAvailableMarketsDTO(
-                            album.getName(),
-                            album.getArtists()
-                                    .stream()
-                                    .map(artist -> new ArtistInfoDTO(
-                                            artist.getName().toUpperCase(),
-                                            artist.getType().toUpperCase()))
-                                    .collect(Collectors
-                                            .toList()),
-                            album.getAvailableMarkets()
-                                    .stream()
-                                    .distinct()
-                                    .sorted()
-                                    .collect(Collectors
-                                            .toList())))
-                    .collect(Collectors.toList());
+                    .map(AlbumDTO::getItems).orElse(Collections.emptyList())
+                    .stream().map(a -> albumsMapper.AlbumToAlbumAvailableMarketsDTO(a)).collect(Collectors.toList());
         } catch (RuntimeException | Error e) {
-            throw e instanceof RuntimeException ? new RuntimeException((e).getMessage()) :
-                    new SpotifyException("Spotify API error ".concat(e.getMessage()));
+            throw new SpotifyException("Spotify API error ".concat(e.getMessage()));
         }
     }
 }
